--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <li>NativeScript Playground: <a href="https://itunes.apple.com/us/app/nativescript-playground/id1263543946?mt=8">iOS</a>, <a href="https://play.google.com/store/apps/details?id=org.nativescript.play&amp;hl=en">Android</a></li>
 <li>NativeScript Preview: <a href="https://itunes.apple.com/us/app/nativescript-preview/id1264484702?mt=8">iOS</a>, <a href="https://play.google.com/store/apps/details?id=org.nativescript.preview&amp;hl=en">Android</a></li>
 </ul>
-<p>In your your respective App Store (Google Play or Apple App Store), locate both apps and install them on your mobile device. If you&#39;re having trouble finding the app, use the links above.</p>
+<p>In your respective App Store (Google Play or Apple App Store), locate both apps and install them on your mobile device. If you&#39;re having trouble finding the app, use the links above.</p>
 <h4 id="explore-the-nativescript-playground">Explore the NativeScript Playground</h4>
 <p>Next, navigate to the <a href="https://play.nativescript.org">NativeScript Playground</a> in your browser. </p>
 <p><img src="images/chapter1/playground-1.png" class="img-large" /></p>
@@ -182,7 +182,7 @@
 </code></pre>
 <h4 id="changing-markup-with-livesync">Changing markup with LiveSync</h4>
 <p>Let&#39;s change the text in the home.component.html file. </p>
-<p>Change the text that reads &quot;Play with NativeScript!&quot; to somethings else. feel free to use the code snippet below, or your own text.</p>
+<p>Change the text that reads &quot;Play with NativeScript!&quot; to somethings else. Feel free to use the code snippet below, or your own text.</p>
 <pre><code class="lang-xml">&lt;Label 
     textWrap=&quot;true&quot; 
     text=&quot;Using LiveSync is easy and convenient!&quot; 
