ch 3 wording fixes

--- a/index.html
+++ b/index.html
@@ -576,8 +576,7 @@ export class AppRoutingModule { }
 <p>Here&#39;s the area of the page we&#39;re going to modify:</p>
 <p><img src="images/chapter3/list-7.jpg" class="img-small" /></p>
 <p>Action Bars are a versatile UI element in NativeScript, and you can use them to customize your app in various ways, including: navigation to the previous page, header icons, and page title/headings. We&#39;re not going to dive into the intimate details of Action Bars, so if you&#39;re interested in learning more, check out the <a href="https://docs.nativescript.org/angular/code-samples/ui/action-bar">official documentation</a>.</p>
-<p>Now that you know a little bit about the action 
-Now that you can navigate to the List page, let&#39;s dive in and customize its Action Bar.</p>
+<p>Now that you know a little bit about the Action Bar,let&#39;s dive in and customize it.</p>
 <h4 class="exercise-start">
     <b>Exercise</b>: Customizing an Action Bar
 </h4>
