--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@ export class ListComponent implements OnInit {
 import &#39;rxjs/add/operator/map&#39;;
 import { Observable } from &quot;rxjs/Observable&quot;;
 </code></pre>
-<p>Next add methods to made the API calls.</p>
+<p>Next add methods to make the API calls.</p>
 <pre><code class="lang-javascript">public getUpcomingFromAPI(): Observable&lt;Launch[]&gt; {
         return this.http.get&lt;Launch[]&gt;(&#39;https://API.spacexdata.com/v2/launches/upcoming&#39;); // upcoming launches
     }
@@ -1096,7 +1096,11 @@ export class ListComponent implements OnInit {
 <p>The <code>subscribe</code> method is part of RxJX that we discussed earlier. When the call the SpaceX API completes, the subscribe method automatically gets called. Inside the subscribe method you are able to translate the data coming back into an array of launches which the UI already knows how to use and bind to properly.</p>
 <blockquote>
 <p><strong>NOTE</strong> </p>
-<p>The if statement inside <code>getPastFromAPI()</code> may look a bit strange to you (because it is). This if statement exists because by default iOS blocks non-https calls; therefore, when attempting to load the mission patch images on iOS it will just fail. This limitation of iOS can be turned off in NativeScript, but in the Playground you can&#39;t change this setting. Keep in mind that the playground is letting us get up and running quickly and not meant for us to push to production from this this limitation is more of a minor nuisance (hence the &quot;quick fix&quot;).</p>
+<p>The if statement inside <code>getPastFromAPI()</code> may look a bit strange to you (because it is). This if statement exists because by default iOS blocks non-https calls; therefore, when attempting to load the mission patch images on iOS it will just fail. This limitation of iOS can be turned off in NativeScript, but in the Playground you can&#39;t change this setting. Keep in mind that the Playground is gets you running fast, and is not meant for production code. In a production app, we&#39;d fix this issue by ensuring all links were HTTPS in our API (that&#39;s not a bad idea), or by disabling the iOS-specific setting.</p>
+</blockquote>
+<blockquote>
+<p><strong>Production Code</strong></p>
+<p>In case you were wondering, moving from the Playground to production code is easy. Use the download button to down any code you&#39;ve already written, ensure NativeScript is installed on your machine, then follow the online documentation for getting ready for deployment. Alternatively, check out the <a href="https://nativescript.org/book">chapters in our book</a>, which are dedicated to getting your apps into the stores.</p>
 </blockquote>
 <p>The last step to making everything work is to import the <code>HttpModule</code> into the app by updating the <code>app.module.ts</code>.</p>
 <pre><code class="lang-javascript">import { NgModule, NO_ERRORS_SCHEMA } from &quot;@angular/core&quot;;
