--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 <h3 id="materials">Materials</h3>
 <p>You can find additional workshop materials and presentation content at the locations below:</p>
 <ul>
-<li>Presentation: <a href="https://github.com/mikebranstein/nativescript-workshop-mcc/blob/master/nativescript-workshop.pptx">https://github.com/mikebranstein/nativescript-workshop-mcc/blob/master/nativescript-workshop.pptx</a></li>
+<li>Opening Presentation: <a href="https://www.slideshare.net/MikeBranstein/prototyping-mobile-apps-with-nativescript-and-angular">https://www.slideshare.net/MikeBranstein/prototyping-mobile-apps-with-nativescript-and-angular</a></li>
+<li>Angular Presentation: <a href="https://github.com/NickBranstein/Presentations/tree/master/2018-CodePaLOUsa">https://github.com/NickBranstein/Presentations/tree/master/2018-CodePaLOUsa</a></li>
 <li>Source code for this app: <a href="https://github.com/mikebranstein/nativescript-spacex-workshop">https://github.com/mikebranstein/nativescript-spacex-workshop</a></li>
 <li>Source code for these instructions: <a href="https://github.com/mikebranstein/nativescript-spacex-workshop-instructions">https://github.com/mikebranstein/nativescript-spacex-workshop-instructions</a></li>
 </ul>
