--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>NativeScript Prototyping Workshop</title>
 
 	<meta charset="utf-8">
-	<meta name="description" content="A quick start quide for NativeScript">
+	<meta name="description" content="NativeScript Prototyping Workshop - Build a SpaceX Mobile App">
 	<meta name="author" content="Mike Branstein and Nick Branstein">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
